[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pynlog"
version = "0.1.0"
description = "A simple logger that prints logs to the console and to a file out of the box."
authors = [
    { name = "Michael" }
]
dependencies = []
readme = "README.md"
requires-python = ">=3.9"

[tools.hatch.build]
packages = ["src/pynlog"]
include = ["src/pynlog/*.pyi", "src/pynlog/py.typed"]